# transition-ticket

./: .pre-commit-config.yaml  README.md  cli.py  cli.spec  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
interface/CLI/: product.py  setting.py  user.py
util/: __init__.py
util/Bilibili/: __init__.py
util/CToken/: __init__.py
util/Captcha/: __init__.py
util/Data/: __init__.py
util/Info/: __init__.py
util/Login/: __init__.py
util/Notice/: __init__.py
util/Request/: __init__.py
util/Task/: __init__.py
